--- a/app/src/main/res/layout/item_toolbar.xml
+++ b/app/src/main/res/layout/item_toolbar.xml
@@ -58,7 +58,7 @@
         android:src="@drawable/ic_searchmsg" />
 
     <ImageView
-        android:id="@+id/imgothermsg"
+        android:id="@+id/imgothersmsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
