--- a/app/src/main/res/layout/activity_add_number_phone.xml
+++ b/app/src/main/res/layout/activity_add_number_phone.xml
@@ -7,20 +7,30 @@
     android:background="#F6F6F6"
     android:orientation="vertical"
     tools:context=".AddNumberPhoneActivity">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="85dp"
-        android:text="Sim 1"
-        android:layout_margin="5dp"
-        android:id="@+id/tvTilte"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:textSize="30dp"
-        />
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_margin="5dp"
-        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="5dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tvTilte"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="5"
+            android:gravity="left|center"
+            android:text="Sim 1"
+            android:textColor="#000000"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="60dp"
         android:background="@drawable/boder"
         android:orientation="horizontal"
         android:layout_height="wrap_content">
@@ -28,12 +38,12 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
             android:layout_margin="5dp"
-            android:src="@drawable/ic_user"/>
+            android:layout_weight="10"
+            android:src="@drawable/ic_user" />
 
         <EditText
-            android:id="@+id/edName"
+            android:id="@+id/edNamepb"
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,7 +53,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_margin="5dp"
+       android:layout_marginTop="10dp"
         android:orientation="horizontal"
         android:background="@drawable/boder"
         android:layout_height="wrap_content">
@@ -53,14 +63,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="10"
             android:layout_margin="5dp"
-            android:src="@drawable/ic_call"/>
+            android:src="@drawable/ic_phoneadd"/>
 
         <EditText
-            android:id="@+id/edPhone"
+            android:id="@+id/edPhonepb"
             android:layout_margin="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
+            android:phoneNumber="true"
             android:hint="Điện thoại" />
     </LinearLayout>
 
