--- a/app/src/main/res/layout/activity_call_phone_book.xml
+++ b/app/src/main/res/layout/activity_call_phone_book.xml
@@ -16,7 +16,6 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvdanggoi"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -33,14 +32,14 @@
             android:layout_marginTop="40dp"
             android:fontFamily="@font/roboto_bold"
             android:gravity="center"
-            android:text="It me"
+            android:text="Me"
             android:textColor="@color/white"
             android:textSize="30dp"
 
             />
 
         <TextView
-            android:id="@+id/tvNumberphone"
+            android:id="@+id/tvNumberphones"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15sp"
