--- a/app/src/main/res/layout/fragment_banphim.xml
+++ b/app/src/main/res/layout/fragment_banphim.xml
@@ -7,70 +7,41 @@
         android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/tvPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="16dp"
-        android:text="Điện thoại"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.396"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:id="@+id/imglist"
+    <include
+        android:id="@+id/headerKeyboard"
+        layout="@layout/item_toolbar_keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:gravity="right"
-        app:layout_constraintTop_toBottomOf="@+id/tvPhone"
-        tools:layout_editor_absoluteX="-16dp">
+        android:layout_alignParentTop="true"
+        android:layout_margin="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/edNumberInput"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="13dp" />
 
-        <ImageView
-            android:id="@+id/img_search"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/ic_search" />
-
-        <ImageView
-            android:id="@+id/img_other"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="15sp"
-            android:src="@drawable/ic_icon_other" />
-
-    </LinearLayout>
-
-
-    <TextView
-        android:id="@+id/tvNumberInput"
+    <EditText
+        android:id="@+id/edNumberInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_bold"
+        android:layout_marginTop="140dp"
         android:gravity="center"
+        android:background="@null"
+        android:phoneNumber="true"
         android:textColor="@color/black"
-        android:textSize="40sp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toTopOf="@+id/rvKeyboard"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imglist"
         app:layout_constraintVertical_bias="0.423" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvKeyboard"
-        android:layout_width="match_parent"
+        android:layout_width="361dp"
         android:layout_height="361dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/img_call"
+        app:layout_constraintBottom_toTopOf="@+id/img_callkb"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imglist"
@@ -79,11 +50,11 @@
     </androidx.recyclerview.widget.RecyclerView>
 
     <ImageView
-        android:id="@+id/img_call"
+        android:id="@+id/img_callkb"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/circle"
+        android:background="@drawable/bodercall"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:padding="7dp"
         android:src="@drawable/ic_call"
@@ -92,6 +63,43 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:tint="@color/white" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:ignore="MissingConstraints">
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/img_googlekeyboard"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:padding="7dp"
+        android:src="@drawable/ic_googlemeetmsg"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.142"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_deletekeyboard"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="16dp"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:padding="7dp"
+        android:src="@drawable/ic_deletekb"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.88"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
