--- a/app/src/main/res/layout/fragment_ganday.xml
+++ b/app/src/main/res/layout/fragment_ganday.xml
@@ -1,66 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/tvPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:text="Điện thoại"
-            android:gravity="center_horizontal"
-            android:textColor="@color/black"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.403"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:id="@+id/imglist"
+        <include
+            android:id="@+id/headerRecently"
+            android:layout_margin="15dp"
+            layout="@layout/item_toolbar_recently"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
-            android:gravity="right"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="15dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
-            tools:layout_editor_absoluteX="0dp">
+            android:layout_alignParentTop="true" />
 
-            <ImageView
-                android:id="@+id/img_add"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="8dp"
-                android:src="@drawable/ic_filter" />
-
-            <ImageView
-                android:id="@+id/img_search"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="8dp"
-                android:src="@drawable/ic_search" />
-
-            <ImageView
-                android:id="@+id/img_other"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="5dp"
-                android:src="@drawable/ic_icon_other" />
-
-        </LinearLayout>
 
         <RelativeLayout
             android:id="@+id/rvListPhone"
@@ -68,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:gravity="bottom"
-            app:layout_constraintTop_toBottomOf="@+id/imglist"
+            app:layout_constraintTop_toBottomOf="@+id/headerRecently"
             tools:layout_editor_absoluteX="0dp">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -81,5 +34,3 @@
                 android:layout_marginBottom="5dp" />
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</FrameLayout>
