--- a/app/src/main/res/layout/item_number.xml
+++ b/app/src/main/res/layout/item_number.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="50dp"
     android:orientation="vertical"
+    android:layout_marginLeft="40dp"
     android:background="?attr/selectableItemBackgroundBorderless"
-    android:layout_height="wrap_content">
+    android:layout_height="84dp">
     <LinearLayout
         android:id="@+id/lnNumber"
         android:layout_width="match_parent"
@@ -17,27 +18,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="1"
-            android:textStyle="bold"
             android:gravity="center"
             style="@style/Text123"
             android:id="@+id/tvNumber"/>
-
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="1"-->
-<!--            style="@style/Text123"-->
-<!--            android:textStyle="bold"-->
-<!--            android:gravity="center"-->
-<!--            android:id="@+id/tvNumber2"/>-->
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="1"-->
-<!--            style="@style/Text123"-->
-<!--            android:textStyle="bold"-->
-<!--            android:gravity="center"-->
-<!--            android:id="@+id/tvNumber3"/>-->
 
         <TextView
             android:layout_width="match_parent"
