--- a/app/src/main/res/layout/item_phonebook.xml
+++ b/app/src/main/res/layout/item_phonebook.xml
@@ -37,6 +37,7 @@
             android:text="ABC"
             android:textColor="@color/black"
             android:textSize="20dp" />
+
     </LinearLayout>
 
 
@@ -74,7 +75,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imgphone"
+                android:id="@+id/imgphonebook"
                 android:padding="8dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
