--- a/app/src/main/res/layout/activity_help_gg_meet.xml
+++ b/app/src/main/res/layout/activity_help_gg_meet.xml
@@ -72,7 +72,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:id="@+id/lnTitile"
+        android:id="@+id/lnContent1"
         android:layout_height="wrap_content">
 
         <TextView
@@ -89,10 +89,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
-            android:id="@+id/lnTitle2"
+            android:id="@+id/lnContent2"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="30dp"
-            android:visibility="visible"
+            android:visibility="gone"
             android:background="@drawable/bodercontentgg"
             android:layout_height="wrap_content">
             <TextView
