--- a/app/src/main/res/layout/fragment_danhba.xml
+++ b/app/src/main/res/layout/fragment_danhba.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:text="Danh bạ có số điện thoại"
+            android:text="10 danh bạ có số điện thoại"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
