--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,33 +8,72 @@
     android:orientation="vertical"
     tools:context=".MessengerActivity">
 
-
     <include
         android:id="@+id/headerMsg"
         layout="@layout/item_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/contentMsg"
         layout="@layout/item_message"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="16dp"
         android:layout_above="@id/lnnewTextInput"
-        android:layout_below="@id/headerMsg" />
+        android:layout_below="@id/headerMsg"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/lnnewTextInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerMsg"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTinNhan"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="5dp"
+        android:padding="5dp"
+        android:layout_marginRight="5dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/ln2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contentMsg"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <ImageView
+        android:id="@+id/ln2"
+        android:layout_width="174dp"
+        android:layout_height="147dp"
+        android:layout_above="@+id/lnnewTextInput"
+        android:orientation="vertical"
+        android:padding="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/lnnewTextInput"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contentMsg"
+        app:layout_constraintVertical_bias="1.0" />
 
     <LinearLayout
+        android:id="@+id/lnnewTextInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="4dp"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/lnnewTextInput"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/rvMessage">
+
 
         <ImageView
-            android:id="@+id/addmsg"
+            android:id="@+id/imgaddmsg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -42,7 +81,7 @@
             android:src="@drawable/ic_addmsg" />
 
         <ImageView
-            android:id="@+id/cameramsg"
+            android:id="@+id/imgcameramsg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -52,20 +91,21 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:layout_weight="8"
             android:background="@drawable/bodermsg"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <EditText
                 android:id="@+id/edTextInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
                 android:layout_weight="2"
+                android:background="@null"
                 android:hint="Nhắn tin (Viettel) "
                 android:maxLines="2"
+                android:paddingLeft="8dp"
                 android:textColorHint="@color/black" />
 
             <ImageView
@@ -77,7 +117,7 @@
                 android:src="@drawable/ic_sim" />
 
             <ImageView
-                android:id="@+id/imgiconmsgone"
+                android:id="@+id/imgiconmsvisible"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -93,22 +133,21 @@
                 android:src="@drawable/ic_micphone" />
 
             <ImageView
-                android:id="@+id/imgiconsmsg"
+                android:id="@+id/imgiconsmsggone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="6"
                 android:layout_margin="2dp"
+                android:layout_weight="6"
                 android:src="@drawable/ic_emote"
                 android:visibility="gone" />
 
             <ImageView
-                android:id="@+id/imgsendmsg"
+                android:id="@+id/imgsendmsggone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="6"
-                android:layout_margin="2dp"
                 android:src="@drawable/ic_send"
                 android:visibility="gone" />
 
@@ -117,4 +156,14 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMessage"
+        android:layout_width="415dp"
+        android:layout_height="168dp"
+        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
