--- a/app/src/main/res/layout/activity_speed_dial.xml
+++ b/app/src/main/res/layout/activity_speed_dial.xml
@@ -62,7 +62,7 @@
             android:layout_weight="4"
             android:src="@drawable/ic_down" />
         <EditText
-            android:id="@+id/edTextInput"
+            android:id="@+id/edTextInput1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
