--- a/app/src/main/res/layout/dialog_delete_phonenumber.xml
+++ b/app/src/main/res/layout/dialog_delete_phonenumber.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bodervoice"
+    android:background="@drawable/bodercontentgg"
     android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
