--- a/app/src/main/res/layout/fragment_danhba.xml
+++ b/app/src/main/res/layout/fragment_danhba.xml
@@ -31,14 +31,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:text="10 danh bạ có số điện thoại"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.447"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
+            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
+            tools:text="Danh bạ có số điện thoại"/>
 
         <LinearLayout
             android:id="@+id/imglist"
