--- a/app/src/main/res/layout/fragment_ganday.xml
+++ b/app/src/main/res/layout/fragment_ganday.xml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-        <include
-            android:id="@+id/headerRecently"
-            android:layout_margin="15dp"
-            layout="@layout/item_toolbar_recently"
+    <include
+        android:id="@+id/headerRecently"
+        layout="@layout/item_toolbar_recently"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="15dp" />
+
+
+    <RelativeLayout
+        android:id="@+id/rvListPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:gravity="bottom"
+        app:layout_constraintTop_toBottomOf="@+id/headerRecently"
+        tools:layout_editor_absoluteX="0dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvrecently"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true" />
-
-
-        <RelativeLayout
-            android:id="@+id/rvListPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:gravity="bottom"
-            app:layout_constraintTop_toBottomOf="@+id/headerRecently"
-            tools:layout_editor_absoluteX="0dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvrecently"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp" />
-        </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="match_parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp" />
+    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
